Fix a copy/paste error that made an essential block of code unreachable b=347144 r+sr=bz